// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard page main error story 1`] = `
<div
  className="start-call-banner-wrapper"
>
  <div
    className="no-margin"
  >
    <h2
      className="dashboard-text"
    >
      Dashboard
    </h2>
    <hr />
    <button
      className="new-session-button primary"
      onClick={[Function]}
      tabIndex="1"
    >
      Begin New Session
    </button>
    <div
      className="error-container"
    >
      <h3>
        Something went wrong.
      </h3>
    </div>
  </div>
</div>
`;

exports[`Dashboard page main story 1`] = `
<div
  className="start-call-banner-wrapper"
>
  <div
    className="no-margin"
  >
    <h2
      className="dashboard-text"
    >
      Dashboard
    </h2>
    <hr />
    <button
      className="new-session-button primary"
      onClick={[Function]}
      tabIndex="1"
    >
      Begin New Session
    </button>
    <div
      className="error-container"
    />
  </div>
</div>
`;

exports[`Dashboard page timeout error story 1`] = `
<div
  className="start-call-banner-wrapper"
>
  <div
    className="no-margin"
  >
    <h2
      className="dashboard-text"
    >
      Dashboard
    </h2>
    <hr />
    <button
      className="new-session-button primary"
      onClick={[Function]}
      tabIndex="1"
    >
      Begin New Session
    </button>
    <div
      className="error-container"
    >
      <h3>
        Request timed out.
      </h3>
    </div>
  </div>
</div>
`;
